# tetris-tui-1

./: CHANGELOG.md  Cargo.toml  Justfile  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
.samo/: config.json
docs/: manual-test-plan.md
scripts/: bump-version.sh  check-naming.sh
src/: cli.rs  input.rs  lib.rs  main.rs  persistence.rs  signals.rs  terminal.rs
src/game/: bag.rs  board.rs  mod.rs  piece.rs  rules.rs  srs.rs  state.rs
src/render/: board_view.rs  helpers.rs  hud.rs  mod.rs  theme.rs
tests/: anim.rs  bag.rs  board.rs  cli.rs  das_arr.rs  das_arr_stress.rs  e2e_gameplay.rs  headless_gameloop.rs  hold.rs  juice.rs  persistence.rs  persistence_integration.rs  persistence_regression.rs  piece.rs  render_helpers.rs  render_snapshots.rs  resize.rs  rules.rs  signal_lifecycle_rexpect.rs  srs_rotation.rs  state.rs  terminal_lifecycle.rs  theme.rs
tests/snapshots/: render_snapshots__board_view_catppuccin_via_arg.snap  render_snapshots__board_view_empty.snap  render_snapshots__board_view_nord.snap  render_snapshots__board_view_with_active_piece_and_ghost.snap  render_snapshots__board_view_with_locked_stack.snap  render_snapshots__game_over_overlay_new_best.snap  render_snapshots__game_over_overlay_regular.snap  render_snapshots__hud_empty_state.snap  render_snapshots__hud_hold_empty.snap  render_snapshots__hud_hold_locked.snap  render_snapshots__hud_hold_occupied.snap  render_snapshots__hud_no_color_mode.snap  render_snapshots__hud_paused.snap  render_snapshots__hud_with_score.snap  render_snapshots__line_clear_flash_frame.snap  (+3 more)
(+30 files in other folders)
