[package]
name = "blocktxt"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
description = "Terminal falling-block puzzle game (Guideline-inspired)"
license = "Apache-2.0"
repository = "https://github.com/NikolayS/tetris-tui-1"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.61", features = ["derive"] }
crossterm = "0.29.0"
nix = { version = "0.31", features = ["signal", "user"] }
directories = "6.0.0"
rand = "0.9.4"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
signal-hook = "0.4.4"
tempfile = "3.27.0"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.1.2"
rand_chacha = "0.9.0"
insta = "1.47.2"
nix = { version = "0.31", features = ["signal", "term"] }
predicates = "3"
proptest = "1.8.0"
regex = "1"
rexpect = "0.6.3"
